--- a/productos/templates/productos/catalogo.html
+++ b/productos/templates/productos/catalogo.html
@@ -153,7 +153,7 @@
                                     </p>
                                     
                                     <p class="card-metadata" style="margin-top: 0;">
-                                        País: {{ producto.pais_origen|default:"N/A" }} | Sello: {{ producto.sello|default:"N/A" }}
+                                        País: {{ producto.pais|default:"N/A" }} | Sello: {{ producto.sello|default:"N/A" }}
                                     </p>
 
                                     <span class="producto-precio-label">Precio:</span>
